# theya

./: .gitattributes  .gitignore  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: bootstrap-gradle-wrapper.yml  ya.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
ci/: emulator_run.sh
gradle/: libs.versions.toml
modules/core/: core.gradle.kts
modules/core/api/: AndroidManifest.xml  build.gradle.kts
modules/core/common/: AndroidManifest.xml  build.gradle.kts
modules/core/datastore/: AndroidManifest.xml  build.gradle.kts
modules/core/models/: AndroidManifest.xml  build.gradle.kts
modules/core/network/: AndroidManifest.xml  build.gradle.kts
modules/core/rust-sdk/: AndroidManifest.xml  (+1 more)
modules/system/engine-rs/: Cargo.toml
modules/system/engine-rs/iuka-core/: Cargo.toml
modules/system/engine-rs/iuka-core/src/: lib.rs
modules/system/engine-rs/iuka-core/src/fs/: permissions.rs  sandbox.rs
modules/system/engine-rs/iuka-core/src/proc/: io_bridge.rs  mod.rs  process_manager.rs
modules/system/engine-rs/theya-bridge/: Cargo.toml
modules/system/engine-rs/theya-bridge/src/: file_map.rs  ipc.rs  lib.rs  transfer.rs
modules/system/engine-rs/theya-pty/: Cargo.toml
modules/system/engine-rs/theya-pty/src/: lib.rs  pty.rs  shell.rs  termios.rs
modules/system/engine-rs/theya-utils/: Cargo.toml
modules/system/engine-rs/theya-utils/src/: error.rs  lib.rs  logging.rs  macros.rs
(+87 files in other folders)
