[workspace]
members = [
    "iuka-core",
    "theya-pty",
    "theya-bridge",
    "theya-utils"
]
resolver = "2"

[workspace.dependencies]
nix = { version = "0.27", features = ["term", "process", "signal"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.5"
tokio = { version = "1.35", features = ["full"] }
